--- a/meteor-vue/index.html
+++ b/meteor-vue/index.html
@@ -25,7 +25,7 @@
   <body id="skin-blur-kiwi">
         <!--<div class="clearfix"></div>-->
         <script src="/static/js/jquery-1.11.2.min.js"></script> <!-- jQuery Library -->
-        <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script> <!-- jQuery Library -->
+        <!--<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script> &lt;!&ndash; jQuery Library &ndash;&gt;-->
         <script src="http://www.jq22.com/jquery/jquery-ui-1.11.0.js"></script> <!-- jQuery UI -->
         <script src="/static/js/jquery.easing.1.3.js"></script> <!-- jQuery Easing - Requirred for Lightbox + Pie Charts-->
         <!-- Bootstrap -->
@@ -56,6 +56,7 @@
         <script src="/static/js/functions.js"></script>
         <!-- es6-promise-auto-min -->
         <script src="/static/js/es6-promise.auto.min.js"></script>
+        <script src="/static/js/jquery.lksMenu.js"></script>
 
     <div id="app"></div>
   </body>
